--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+composer.phar
+vendor/
 
 # My Own Stuff
 cookie.txt
